# experiment

./: .gitignore
data/2025_01_24/: memo.md
data/2025_01_27/: memo.md
data/2025_01_27/miyakita1028/: 2025-01-27 120425.9056611737946091845.json  2025-01-27 120426.2166281737945995360.json  2025-01-27 120431.8247141737945949346.json  2025-01-27 120434.4650811737946130566.json  2025-01-27 120455.0194531737946095043.json  2025-01-27 120502.6200121737946858316.json  2025-01-27 120531.8902061737947108988.json  45.json  72.json  81.json  82.json  86.json  logs1737945793355.json.json  logs1737945824591.json.json  logs1737945856596.json.json  logs1737945884616.json.json  logs1737945898622.json.json  logs1737945912612.json.json  logs1737945931418.json.json  logs1737945941584.json.json  logs1737945972614.json.json  logs1737946004621.json.json  logs1737946035582.json.json  logs1737946067571.json.json  logs1737946098601.json.json  logs1737946129613.json.json  logs1737946160607.json.json  logs1737946192613.json.json  logs1737946225618.json.json  logs1737946256610.json.json  logs1737946288613.json.json  logs1737946320611.json.json  logs1737946351608.json.json  logs1737946383605.json.json  logs1737946415201.json.json  logs1737946446615.json.json  logs1737946475564.json.json  logs1737946507608.json.json  (+94 more)
data/2025_01_28/: memo.md
data/2025_01_29/: readme.md
data/2025_01_30/: memo.md
data/2025_01_31/: memo.md
data/2025_02_05/: memo.md
data/2025_02_06/: memo.md
scripts/: .gitignore  arrow.py  convert.py  image_length.ipynb  plot.ipynb  pyproject.toml
(+16598 files in other folders)
